--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 # WELCOME TO THE JELLYFISH FORWARD DEPLOYED ENGINEERING INTERVIEW
 
+# Note: Feel free to create or remove any files as you see fit 
+
 # The following is a breakdown of the relevant files/folders
 
     Folder: company_files -> a collections of files that associate 1:1 with companies. 
